styles.css
*{
    padding:0;
    margin:0;
    box-sizing: border-box;
}
:root{
    --primary-color:#141412;
    --secondary-color:#F5F2E7;
    --text-color:#333333;
    --accent-color1:#333232;
    --accent-color2:#C9A227;

}

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  max-width: 100%;
  overflow-x: hidden;
}



body {
    font-family: Arial, sans-serif;
    color: #333;
/*     border:5px solid red; */
    height:minmax(100vh, auto);
    overflow: hidden;
}


header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px;
/*     background-color:var(--primary-color); */
    font-weight:900;
    background-color: rgba(0, 0, 0, 0.5);

}


.logo {
    background-image: url(LogoF-1.png);
    background-repeat: no-repeat;
    background-size:cover;
    height:60px;
    width:159px;
    font-size: 1.5rem;
    /* border:1px solid white; */

}



.hamburger-menu {
    font-size: 1.8rem;
    cursor: pointer;
    color:white;
}

nav.hidden {
    display: none;
}

nav ul {
    list-style-type: none;
    background-color: var(--primary-color);
    padding: 10px 0;
}

nav ul li {
    padding: 10px;
    text-align: center;
}

nav ul li a {
    color: white;
    text-decoration: none;
    font-size: 1.2rem;
}


.landing{
    overflow:hidden;
    width:100%;
    height:82dvh;
    background-image: url(landing_img1.jpg);
    background-size: cover;
    background-position: center;
}

video {
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
      z-index: -1;
}

.landing-text{
    margin-top:40px;
    padding: 10px;
    color: white;
    text-align: center;
/*     background-color: rgba(0, 0, 0, 0.5); */
    border-radius: 10px;
    text-wrap: balance;
}

a{
    color:white;
}

.footer{
    background-color:var(--primary-color);
    height:6dvh;
    display:flex;
    justify-content: space-around;
    align-items: center;
    font-size: 15px;
    color:whitesmoke;
    margin: 0 10px;
    border-radius:8px;
}

